--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
-font_family      Fira Code
+font_family      Fira Code Retina
 #font_family      SpaceMono Mono
-bold_font        Fira Code
-italic_font      Fira Code
-bold_italic_font Fira Code
+bold_font        Fira Code Bold
+italic_font      Fira Code Italic
+bold_italic_font Fira Code Bold Italic
 
 font_size 14
 
@@ -50,9 +50,9 @@ click_interval -1.0
 
 focus_follows_mouse no
 
-repaint_delay 10
+repaint_delay 5
 
-input_delay 3
+input_delay 1
 
 sync_to_monitor no
 
@@ -75,7 +75,7 @@ enabled_layouts *
 window_resize_step_cells 2
 window_resize_step_lines 2
 
-window_border_width 1.0
+window_border_width 0
 
 draw_minimal_borders yes
 
