--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -205,7 +205,7 @@ opacity-rule = [
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "100:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Code'",
+  # "90:class_g     = 'Code'",
   "100:class_g     = 'Rofi'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
